iniciei a aula de repetições
Commit e era isso!

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\CursoJS\\aula12\\ex013.js"
+            "program": "${workspaceFolder}\\CursoJS\\aula13\\ambiente.js"
         }
     ]
 }
