--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\CursoJS\\aula17\\objeto01.js"
+            "program": "${workspaceFolder}\\Codedex\\temperature.js"
         }
     ]
 }
