--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\Codedex\\good-morning.js"
+            "program": "${workspaceFolder}\\Codedex\\pH-Levels.js"
         }
     ]
 }
