criei um programa que imprime números pares até 50
Commit e era isso!

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\Codedex\\not-tell-lies.js"
+            "program": "${workspaceFolder}\\Codedex\\even-odds.js"
         }
     ]
 }
