--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\Codedex\\even-odds.js"
+            "program": "${workspaceFolder}\\Codedex\\based-numbers.js"
         }
     ]
 }
